[package]
name = "alexa-verifier"
version = "0.1.1"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
description = "Verify that requests were sent by Alexa for custom webservice skills, in Rust"
license = "MIT"
repository = "https://github.com/tarkah/alexa-rust-webservice-verifier"
readme = "README.md"
keywords = ["alexa", "skill", "verify", "webservice"]

[lib]
name = "alexa_verifier"
path = "src/lib.rs"

[dependencies]
base64 ="0.10"
der-parser = "2.1"
failure = "0.1"
log = "0.4"
ring = { version = "0.16", features = ['std'] }
reqwest = "0.9"
time = "0.1"
url = "2.0"
x509-parser = "0.5"