[package]
name = "alexa-verifier"
version = "0.2.1"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"
description = "Verify that requests were sent by Alexa for custom webservice skills, in Rust"
license = "MIT"
repository = "https://github.com/tarkah/alexa-rust-webservice-verifier"
readme = "README.md"
keywords = ["alexa", "skill", "verify", "webservice"]

[lib]
name = "alexa_verifier"
path = "src/lib.rs"

[features]
default = ['sync', 'async']
sync = ['reqwest/blocking']
async = ['futures-util']

[dependencies]
base64 ="0.10"
der-parser = "2.1"
failure = "0.1"
futures-util = { version = "0.3", optional = true }
log = "0.4"
ring = { version = "0.16", features = ['std'] }
reqwest = "0.10.0-alpha.2"
time = "0.1"
url = "2.0"
x509-parser = "0.5"

[package.metadata.docs.rs]
all-features = true